Fix up more XUL GetFrameForPoint impls to correctly handle paint layers.  Bug 225732, r+sr=dbaron